# FL-Python-API-Requester

./: .gitignore  README.md  pyproject.toml
src/fl_api_requester/: FLAPIConnectionData.py  FLAPIRequester.py  __init__.py
src/fl_api_requester/dto/request/alliance/: CreateAllianceDTO.py  RemoveAllianceDTO.py
src/fl_api_requester/dto/request/authentication/: AuthenticationRequestDTO.py
src/fl_api_requester/dto/request/discord/: AddAllianceToDiscordDTO.py  AddChannelsToDiscordDTO.py  CreateDiscordDTO.py  RemoveChannelsFromDiscordDTO.py  RemoveDiscordDTO.py
src/fl_api_requester/dto/request/discord_channel/: DiscordChannelRequestDTO.py
src/fl_api_requester/dto/request/planet/: AddPlanetDTO.py  RemovePlanetDTO.py  RemoveSpecificPlanetDTO.py
src/fl_api_requester/dto/request/player/: CreatePlayerDTO.py  RemovePlayerDTO.py  SetAllianceDTO.py  SetPlayerRolesDTO.py
src/fl_api_requester/dto/request/war/: SetRespawnTimerDTO.py  StartWarDTO.py  StopWarDTO.py  WarAttackRequestDTO.py
src/fl_api_requester/dto/response/alliance/: AllianceDTO.py  AllianceNameDTO.py
src/fl_api_requester/dto/response/authentication/: AuthenticationResponseDTO.py
src/fl_api_requester/dto/response/discord/: DiscordDTO.py
src/fl_api_requester/dto/response/discord_channel/: DiscordChannelResponseDTO.py
src/fl_api_requester/dto/response/planet/: PlanetDTO.py  PlanetOwnerDTO.py
src/fl_api_requester/dto/response/player/: PlayerDTO.py
src/fl_api_requester/dto/response/war/: WarAttackResponseDTO.py  WarDTO.py
tests/: Env.py  test_fl_api_requester.py
