[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-api-requester"
version = "1.0.6"
authors = [
    { name="FL-GL", email="franceleadergl@gmail.com" }
]
description = "The France Leader API requester."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies=[
    "dacite", "requests"
]

[project.urls]
"Homepage" = "https://github.com/France-Leader-Galaxy-Life/FL-Python-API-Requester"